force-app/main/default/objects/Lead/fields/AppointmentType__c.field-meta.xml
<CustomField>
    <fullName>AppointmentType__c</fullName>
    <label>Appointment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VIRTUAL</fullName>
            </value>
            <value>
                <fullName>SHOWROOM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>