force-app/main/default/objects/Lead/fields/Copado_field_test__c.field-meta.xml
<CustomField>
    <fullName>Copado_field_test__c</fullName>
    <label>Copado field test</label>
    <length>50</length>
    <type>Text</type>
</CustomField>