force-app/main/default/objects/Lead/fields/DateCreated__c.field-meta.xml
<CustomField>
    <fullName>DateCreated__c</fullName>
    <inlineHelpText>The date the lead was received</inlineHelpText>
    <label>Created</label>
    <type>Date</type>
</CustomField>