force-app/main/default/objects/Lead/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to associate Leads to dealers without having to convert them into Private Customers</description>
    <label>Dealer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Account_Classification__c</field>
            <operation>equals</operation>
            <value>Distributor / dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Dealer)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>