force-app/main/default/objects/Lead/fields/ExistingAccount__c.field-meta.xml
<CustomField>
    <fullName>ExistingAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set when the account exists at the time of the lead creation</description>
    <label>Existing Account?</label>
    <type>Checkbox</type>
</CustomField>