force-app/main/default/objects/Lead/fields/google_campaign_id__c.field-meta.xml
<CustomField>
    <fullName>google_campaign_id__c</fullName>
    <label>google campaign id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>