force-app/main/default/objects/Lead/fields/google_form_id__c.field-meta.xml
<CustomField>
    <fullName>google_form_id__c</fullName>
    <label>google form id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>