force-app/main/default/objects/Lead/fields/google_lead_id__c.field-meta.xml
<CustomField>
    <fullName>google_lead_id__c</fullName>
    <label>google lead id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>