force-app/main/default/objects/Lead/fields/Interests__c.field-meta.xml
<CustomField>
    <fullName>Interests__c</fullName>
    <label>Interests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>