force-app/main/default/objects/Lead/fields/IsSupportOrWarranty__c.field-meta.xml
<CustomField>
    <fullName>IsSupportOrWarranty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is product support or warranty</label>
    <type>Checkbox</type>
</CustomField>