force-app/main/default/objects/Lead/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
                <label>US English</label>
            </value>
            <value>
                <fullName>en_GB</fullName>
                <label>GB English</label>
            </value>
            <value>
                <fullName>fr_FR</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>es_ES</fullName>
                <label>Spanish</label>
            </value>
            <value>
                <fullName>pt_PT</fullName>
                <label>Portuguese</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>