force-app/main/default/objects/Lead/fields/Lead_origin__c.field-meta.xml
<CustomField>
    <fullName>Lead_origin__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Lead origin</label>
    <type>Checkbox</type>
</CustomField>