force-app/main/default/objects/Lead/fields/LeadSubtype__c.field-meta.xml
<CustomField>
    <fullName>LeadSubtype__c</fullName>
    <inlineHelpText>Please enter here the origin of the lead (i.e. Sale January 2020)</inlineHelpText>
    <label>Lead Subtype</label>
    <length>50</length>
    <type>Text</type>
</CustomField>