force-app/main/default/objects/Lead/fields/LeadType__c.field-meta.xml
<CustomField>
    <fullName>LeadType__c</fullName>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Form</fullName>
            </value>
            <value>
                <fullName>PDF Guide Download</fullName>
            </value>
            <value>
                <fullName>US Material Bank</fullName>
            </value>
            <value>
                <fullName>EU Material Bank</fullName>
            </value>
            <value>
                <fullName>Course Request</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Book an Appointment</fullName>
            </value>
            <value>
                <fullName>Google Ad</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>US Register Form</fullName>
            </value>
            <value>
                <fullName>Business Trip</fullName>
            </value>
            <value>
                <fullName>Contact Form;Contact Form</fullName>
                <isActive>false</isActive>
                <label>Contact Form;Contact Form</label>
            </value>
            <value>
                <fullName>Showroom Appointment</fullName>
                <isActive>false</isActive>
                <label>Showroom Appointment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>