force-app/main/default/objects/Lead/fields/NBK_CommunicationType__c.field-meta.xml
<CustomField>
    <fullName>NBK_CommunicationType__c</fullName>
    <label>Tipo de comunicación</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inspo</fullName>
            </value>
            <value>
                <fullName>Newsletter</fullName>
            </value>
            <value>
                <fullName>News</fullName>
            </value>
            <value>
                <fullName>Promotions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>