force-app/main/default/objects/Lead/fields/NextAction__c.field-meta.xml
<CustomField>
    <fullName>NextAction__c</fullName>
    <description>Date of the next action to take to move the lead forward</description>
    <inlineHelpText>Date of the next action to take to move the lead forward</inlineHelpText>
    <label>Next Action</label>
    <type>Date</type>
</CustomField>