force-app/main/default/objects/Lead/fields/NotvalidEmail__c.field-meta.xml
<CustomField>
    <fullName>NotvalidEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>s the email of the contact not a valid one?
true =&gt; no valid
false =&gt; valid</description>
    <label>Not valid Email</label>
    <type>Checkbox</type>
</CustomField>