force-app/main/default/objects/Lead/fields/Opportunity_Classification__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Classification__c</fullName>
    <label>Opportunity Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airport</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Health care</fullName>
            </value>
            <value>
                <fullName>Hotels and other hospitality</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Public building</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Residential (Retail)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>