force-app/main/default/objects/Lead/fields/Opportunity_Classification_II__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Classification_II__c</fullName>
    <label>Opportunity Classification II</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Classification__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Car dealership</fullName>
            </value>
            <value>
                <fullName>Cinema</fullName>
            </value>
            <value>
                <fullName>Clothing store</fullName>
            </value>
            <value>
                <fullName>Financial institutions</fullName>
            </value>
            <value>
                <fullName>Multi-unit</fullName>
            </value>
            <value>
                <fullName>Other store</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Shopping centre/Mall/Leisure center</fullName>
            </value>
            <value>
                <fullName>Single-family home</fullName>
            </value>
            <value>
                <fullName>Sports center</fullName>
            </value>
            <value>
                <fullName>Supermarket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>