force-app/main/default/objects/Lead/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <label>Project Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>