force-app/main/default/objects/Lead/fields/OwnerLocked__c.field-meta.xml
<CustomField>
    <fullName>OwnerLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true whe no owner assignation has to be executed</description>
    <label>Owner Locked</label>
    <type>Checkbox</type>
</CustomField>