force-app/main/default/objects/Lead/fields/OwnerReason__c.field-meta.xml
<CustomField>
    <fullName>OwnerReason__c</fullName>
    <description>FIeld to explain the reason the owner is allocated (used by LeadHelper). It is a technical field that does not have to be displayed.</description>
    <label>Owner Reason</label>
    <length>40</length>
    <type>Text</type>
</CustomField>