force-app/main/default/objects/Lead/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Lead Phone</label>
    <type>Phone</type>
</CustomField>