force-app/main/default/objects/Lead/fields/PreferredContactMethod__c.field-meta.xml
<CustomField>
    <fullName>PreferredContactMethod__c</fullName>
    <inlineHelpText>Select the customer&apos;s preferred contact method. If &quot;Others&quot;, please specify in &quot;Preferred Contact Time&quot;</inlineHelpText>
    <label>Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMAIL</fullName>
                <label>Email</label>
            </value>
            <value>
                <fullName>PHONE</fullName>
                <label>Phone</label>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>