force-app/main/default/objects/Lead/fields/PreferredContactTime__c.field-meta.xml
<CustomField>
    <fullName>PreferredContactTime__c</fullName>
    <label>Preferred Contact Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>