force-app/main/default/objects/Lead/fields/Product_Categories__c.field-meta.xml
<CustomField>
    <fullName>Product_Categories__c</fullName>
    <label>Product Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adhesives</fullName>
                <label>Adhesives and other compliments</label>
            </value>
            <value>
                <fullName>Bathroom furniture</fullName>
            </value>
            <value>
                <fullName>Bathtubs</fullName>
            </value>
            <value>
                <fullName>Ceramics</fullName>
            </value>
            <value>
                <fullName>Countertops</fullName>
            </value>
            <value>
                <fullName>Kitchen furniture</fullName>
            </value>
            <value>
                <fullName>Krion</fullName>
            </value>
            <value>
                <fullName>Laminate</fullName>
            </value>
            <value>
                <fullName>Linkfloor</fullName>
            </value>
            <value>
                <fullName>Mosaics</fullName>
            </value>
            <value>
                <fullName>Natural Stone</fullName>
            </value>
            <value>
                <fullName>Raised access flooring</fullName>
            </value>
            <value>
                <fullName>Sanitaryware</fullName>
            </value>
            <value>
                <fullName>Shower products</fullName>
            </value>
            <value>
                <fullName>Taps</fullName>
            </value>
            <value>
                <fullName>Ventilated facades</fullName>
            </value>
            <value>
                <fullName>Washbasin</fullName>
            </value>
            <value>
                <fullName>Wood</fullName>
            </value>
            <value>
                <fullName>Xtone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>