force-app/main/default/objects/Lead/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <label>Profession</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Architects &amp; interior designers</fullName>
            </value>
            <value>
                <fullName>Builders and installers</fullName>
            </value>
            <value>
                <fullName>Fabricators and distributors</fullName>
            </value>
            <value>
                <fullName>Façades</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>