force-app/main/default/objects/Lead/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <description>Profile of the person or company contacting us</description>
    <label>Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Designer</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
                <isActive>false</isActive>
                <label>Distributor</label>
            </value>
            <value>
                <fullName>Fabricator</fullName>
            </value>
            <value>
                <fullName>Facade Consultant</fullName>
            </value>
            <value>
                <fullName>Facade Installer</fullName>
            </value>
            <value>
                <fullName>Kitchen &amp; Bath store</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>-None-</fullName>
                <isActive>false</isActive>
                <label>-None-</label>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Private Customer</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Realtor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>