force-app/main/default/objects/Lead/fields/Quantity_of_the_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Quantity_of_the_opportunity__c</fullName>
    <label>Lead Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>