force-app/main/default/objects/Lead/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>Tipo de cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Particular</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>