force-app/main/default/objects/Lead/fields/ReferredBy__c.field-meta.xml
<CustomField>
    <fullName>ReferredBy__c</fullName>
    <label>How did you hear about us?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Magazine</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
            <value>
                <fullName>Television</fullName>
            </value>
            <value>
                <fullName>Showroom</fullName>
            </value>
            <value>
                <fullName>Existing Customers</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>