force-app/main/default/objects/Lead/fields/Representative__c.field-meta.xml
<CustomField>
    <fullName>Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Porcelanosa User that has filled the form that generated the lead on behalf of a possible customer. It is used mainly for Material Bank leads (US).</description>
    <label>Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Representative</relationshipName>
    <type>Lookup</type>
</CustomField>