force-app/main/default/objects/Lead/fields/roomTypeBathroom__c.field-meta.xml
<CustomField>
    <fullName>roomTypeBathroom__c</fullName>
    <description>Quantity of bathrooms on the project</description>
    <inlineHelpText>Number of bathrooms, equal or greater than 0</inlineHelpText>
    <label>No. Bathrooms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>