force-app/main/default/objects/Lead/fields/roomTypeBedroom__c.field-meta.xml
<CustomField>
    <fullName>roomTypeBedroom__c</fullName>
    <description>Quantity of bedrooms on the project</description>
    <inlineHelpText>Number of bedrooms, equal or greater than 0</inlineHelpText>
    <label>No. Bedrooms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>