force-app/main/default/objects/Lead/fields/roomTypeFireplace__c.field-meta.xml
<CustomField>
    <fullName>roomTypeFireplace__c</fullName>
    <description>Quantity of fireplaces on the project</description>
    <inlineHelpText>Number of fireplaces, equal or greater than 0</inlineHelpText>
    <label>No. Fireplaces</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>