force-app/main/default/objects/Lead/fields/roomTypeFoyer__c.field-meta.xml
<CustomField>
    <fullName>roomTypeFoyer__c</fullName>
    <description>Quantity of foyers on the project</description>
    <inlineHelpText>Number of foyers, equal or greater than 0</inlineHelpText>
    <label>No. Foyers (Entry Area)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>