force-app/main/default/objects/Lead/fields/roomTypeFullHouse__c.field-meta.xml
<CustomField>
    <fullName>roomTypeFullHouse__c</fullName>
    <description>Quantity of full House on the project</description>
    <inlineHelpText>Number of full Houses, equal or greater than 0</inlineHelpText>
    <label>No. Full Houses</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>