force-app/main/default/objects/Lead/fields/roomTypeKitchen__c.field-meta.xml
<CustomField>
    <fullName>roomTypeKitchen__c</fullName>
    <description>Quantity of kitchens on the project</description>
    <inlineHelpText>Number of kitchens, equal or greater than 0</inlineHelpText>
    <label>No. Kitchens</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>