force-app/main/default/objects/Lead/fields/roomTypeLaundryRoom__c.field-meta.xml
<CustomField>
    <fullName>roomTypeLaundryRoom__c</fullName>
    <description>Quantity of laundry Rooms on the project</description>
    <inlineHelpText>Number of laundry Rooms, equal or greater than 0</inlineHelpText>
    <label>No. Laundry Rooms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>