force-app/main/default/objects/Lead/fields/roomTypeLivingRoom__c.field-meta.xml
<CustomField>
    <fullName>roomTypeLivingRoom__c</fullName>
    <description>Quantity of living rooms on the project</description>
    <inlineHelpText>Number of living rooms, equal or greater than 0</inlineHelpText>
    <label>No. Living Rooms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>