force-app/main/default/objects/Lead/fields/roomTypeOther__c.field-meta.xml
<CustomField>
    <fullName>roomTypeOther__c</fullName>
    <description>Quantity of other room types on the project</description>
    <inlineHelpText>Number of other room types, equal or greater than 0</inlineHelpText>
    <label>No. Other rooms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>