force-app/main/default/objects/Lead/fields/roomTypeSwimmingPool__c.field-meta.xml
<CustomField>
    <fullName>roomTypeSwimmingPool__c</fullName>
    <description>Quantity of swimming pools on the project</description>
    <inlineHelpText>Number of swimming pools, equal or greater than 0</inlineHelpText>
    <label>No. Swimming Pools</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>