force-app/main/default/objects/Lead/fields/Showroom__c.field-meta.xml
<CustomField>
    <fullName>Showroom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Showroom</label>
    <referenceTo>SALES_OFFICE__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>